# gcpx

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  lib.rs  main.rs
src/commands/: delete.rs  login.rs  mod.rs  run.rs  save.rs  switch.rs
tests/: integration.rs
