[package]
name = "gcpx"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Andrés Rodríguez"]
description = "GCP context switcher - manage multiple gcloud accounts with instant ADC switching"
license = "MIT"
repository = "https://github.com/andres-pcg/gcpx"
readme = "README.md"
keywords = ["gcloud", "gcp", "cli", "credentials"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6.0"
anyhow = "1.0"
dialoguer = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.15"
